<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="46dp"
                    android:layout_height="53dp"
                    app:srcCompat="@drawable/posto"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="App GasEta"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="#2C6466"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="90dp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">


            <EditText
                android:id="@+id/Etanol"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:width="1000dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_hint_edit_Sobrenome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="X" />


            <EditText
                android:id="@+id/Gasolina"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_Primeironome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColorHint="#757575" />

        </LinearLayout>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                android:backgroundTint="#F02B6365"
                android:text="@string/txt_button_finalizar" />

            <TextView

                android:id="@+id/resultado"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Resultado"
                android:textColor="#2C6466"
                android:textSize="20dp" />



                <Button
                    android:id="@+id/btnlimpar"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                   android:layout_marginTop="30dp"
                    android:backgroundTint="#F02B6365"
                    android:text="@string/txt_button_limpar" />

            <Button
                android:id="@+id/btnsalvar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="#F02B6365"
                android:enabled="false"
                android:text="@string/txt_button_salvar" />

                <Button
                    android:id="@+id/btnfinalizar"
                    android:layout_gravity="center"
                    android:layout_width="250dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F02B6365"
                    android:text="Finalizar" />




        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>

